--- a/index.html
+++ b/index.html
@@ -241,11 +241,13 @@
                 <!--Gallery 1-->
                 <div class="cs-gallery" data-category="one">
                     <!--Picture 1-->
+                
                     <picture class="cs-image">
-                        <source media="(max-width: 600px)" srcset="https://csimg.nyc3.digitaloceanspaces.com/SideBySide/leaves2.jpg">
-                        <source media="(min-width: 601px)" srcset="https://csimg.nyc3.digitaloceanspaces.com/SideBySide/leaves2.jpg">
-                        <img loading="lazy" decoding="async" src="https://csimg.nyc3.digitaloceanspaces.com/SideBySide/leaves2.jpg" alt="gallery" width="305" height="400">
+                        <source media="(max-width: 600px)" srcset="assets/images/WILDBERRYCOVERFB.png">
+                        <source media="(min-width: 601px)" srcset="assets/images/WILDBERRYCOVERFB.png">
+                        <img loading="lazy" decoding="async" src="assets/images/WILDBERRYCOVERFB.png"alt="gallery" width="305" height="400">
                     </picture>
+                    
                     <!--Picture 2-->
                     <picture class="cs-image">
                         <source media="(max-width: 600px)" srcset="https://csimg.nyc3.digitaloceanspaces.com/SideBySide/leaves2.jpg">
