--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 
         <section id="hero-81">
             <div class="cs-container">
-                <h1 class="cs-title">Construction & Maintenance Experts in New York City</h1>
+                <h1 class="cs-title">Practicing Web development</h1>
                 <p class="cs-text">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. At quis donec eget tellus turpis imperdiet aenean libero. 
                 </p>
