Updated title headers

--- a/index.html
+++ b/index.html
@@ -109,9 +109,9 @@
 
         <section id="hero-81">
             <div class="cs-container">
-                <h1 class="cs-title">Practicing Web development</h1>
+                <h1 class="cs-title">Web Design and Development</h1>
                 <p class="cs-text">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. At quis donec eget tellus turpis imperdiet aenean libero. 
+                   Your Vision, Our Code – Custom Websites That Work.
                 </p>
                 <a href="" class="cs-button-solid">Request Appointment</a>
             </div>
@@ -134,27 +134,27 @@
                     <picture class="cs-icon">
                         <img loading="lazy" decoding="async" src="https://csimg.nyc3.digitaloceanspaces.com/Hero/toolbox.svg" alt="appliance" width="52" height="52" aria-hidden="true">
                     </picture>
-                    <h2 class="cs-title">Full Kitchen Remodel</h2>
+                    <h2 class="cs-title">Custom Website Design</h2>
                     <p class="cs-text">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc tempus, dolor enim, elit. 
+                        We create visually stunning, user-focused websites tailored to your brand identity and business goals. Whether you're starting from scratch or looking to refresh your existing site, our designs are built to captivate and convert.
                     </p>
                 </li>
                 <li class="cs-item">
                     <picture class="cs-icon">
                         <img loading="lazy" decoding="async" src="https://csimg.nyc3.digitaloceanspaces.com/Hero/buildings.svg" alt="appliance" width="52" height="52" aria-hidden="true">
                     </picture>
-                    <h2 class="cs-title">Exterior Repairs</h2>
+                    <h2 class="cs-title">Branding & Visual Identity</h2>
                     <p class="cs-text">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc tempus, dolor enim, elit. 
+                        We help businesses stand out with cohesive branding—from logos and typography to color schemes and design systems. Whether you're launching a new brand or rebranding an existing one, we craft visuals that tell your story and build recognition.
                     </p>
                 </li>
                 <li class="cs-item">
                     <picture class="cs-icon">
                         <img loading="lazy" decoding="async" src="https://csimg.nyc3.digitaloceanspaces.com/Hero/gear.svg" alt="appliance" width="52" height="52" aria-hidden="true">
                     </picture>
-                    <h2 class="cs-title">Utility Maintenance</h2>
+                    <h2 class="cs-title">Website Maintenance & Optimization</h2>
                     <p class="cs-text">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc tempus, dolor enim, elit. 
+                        Your website is never "done." We provide ongoing support, updates, performance tuning, security enhancements, and SEO optimization to ensure your site stays fast, secure, and ranking high in search engines. 
                     </p>
                 </li>
             </ul>
